Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.0.23
-
None
Description
Even after the fix for MDEV-9233, MariaDB 10.0.23 still crashes when working with partitioned tables copied from Windows to Linux.
160114 19:21:39 [Warning] Partition table db/tab#P#p20150919 opened after converting to lower case. The table may have been moved from a case in-sensitive file system. Please recreate table in the current file system
|
160114 19:21:39 [ERROR] mysqld got signal 11 ;
|
This could be because you hit a bug. It is also possible that this binary
|
or one of the libraries it was linked against is corrupt, improperly built,
|
or misconfigured. This error can also be caused by malfunctioning hardware.
|
|
|
To report this bug, see http://kb.askmonty.org/en/reporting-bugs
|
|
|
We will try our best to scrape up some info that will hopefully help
|
diagnose the problem, but since we have already crashed,
|
something is definitely wrong and this may fail.
|
|
|
Server version: 10.0.23-MariaDB
|
key_buffer_size=2621440000
|
read_buffer_size=65536
|
max_used_connections=12
|
max_threads=162
|
thread_count=2
|
It is possible that mysqld could use up to
|
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 2615021 K bytes of memory
|
Hope that's ok; if not, decrease some variables in the equation.
|
|
|
Thread pointer: 0x0x7f5862ce9008
|
Attempting backtrace. You can use the following information to find out
|
where mysqld died. If you see no messages after this, something went
|
terribly wrong...
|
stack_bottom = 0x7f58633fe870 thread_stack 0x48000
|
|
|
/usr/sbin/mysqld(my_print_stacktrace+0x2b)[0xb8bd6b]
|
/usr/sbin/mysqld(handle_fatal_signal+0x398)[0x7375f8]
|
/lib64/libpthread.so.0[0x332d00f790]
|
/usr/sbin/mysqld[0x88fe1d]
|
/usr/sbin/mysqld(_ZN7handler12ha_write_rowEPh+0x14f)[0x7408ff]
|
/usr/sbin/mysqld[0xb64f33]
|
/usr/sbin/mysqld(_ZN7handler12ha_write_rowEPh+0x14f)[0x7408ff]
|
/usr/sbin/mysqld(_ZN14Rows_log_event9write_rowEP14rpl_group_infob+0x113)[0x7fadd3]
|
/usr/sbin/mysqld(_ZN20Write_rows_log_event11do_exec_rowEP14rpl_group_info+0x22)[0x7fb072]
|
/usr/sbin/mysqld(_ZN14Rows_log_event14do_apply_eventEP14rpl_group_info+0x231)[0x7ef1e1]
|
/usr/sbin/mysqld(_Z26apply_event_and_update_posP9Log_eventP3THDP14rpl_group_infoP19rpl_parallel_thread+0x16d)[0x56fb6d]
|
/usr/sbin/mysqld(handle_slave_sql+0x15cf)[0x57211f]
|
/lib64/libpthread.so.0[0x332d007a51]
|
/lib64/libc.so.6(clone+0x6d)[0x332cce893d]
|
|
|
Trying to get some variables.
|
Some pointers may be invalid and cause the dump to abort.
|
Query (0x0):
|
Connection ID (thread ID): 85
|
Status: NOT_KILLED
|
|
|
Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on
|
|
|
The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
|
information that should help you find out what is causing the crash.
|
Writing a core file
|
Attachments
Issue Links
- relates to
-
MDEV-9471 Server crashes or returns an error while trying to alter partitioning on a table moved from Windows to Linux
-
- Closed
-