MDEV-9424: Server crashes when slave works with partitioned tables copied from Windows to Linux

Add check to avoid NULL-pointer access and added warning if share->ib_table
is not what expected.